Fix height issue for dark mode extensions

--- a/css/styles.css
+++ b/css/styles.css
@@ -154,6 +154,13 @@ button.active {
   flex-wrap: wrap;
 }
 
+@media (min-width: 650px) {
+  /* for dark mode extensions */
+  body {
+    height: 100vh;
+  }
+}
+
 @media (max-width: 750px) {
   .header {
     font-size: var(--h2);
